# cmocka_test

./: CMakeLists.txt  README.md  build.sh  cmocka动态内存检查使用方法.txt
libs/cmocka/: libcmocka.so.0.4.1
libs/include/: cmocka.h
test_cmocka_demo/: CMakeLists.txt  check_mock_fun_demo.c  cmocka_unit_test_setup_teardown_demo.c  dynamic_memory_demo.c  main.c
test_cmocka_demo/include/: check_mock_fun_demo.h  cmocka_demo_include.h  cmocka_unit_test_setup_teardown_demo.h  dynamic_memory_demo.h
